[package]
name = "deauth-detector"
version = "0.1.0"
authors = ["Etay Cohen <etaychn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.9", features = ["capture-stream"] }
chrono = "0.4"
